--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=newparkdevelopment
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=newpbrhb_db
+DB_USERNAME=newpbrhb_sofa_api
+DB_PASSWORD="$WR1q-iJE3_K"
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
