--- a/.env
+++ b/.env
@@ -26,12 +26,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=qisofts.com
+MAIL_HOST=newparkdevelopment.com
 MAIL_PORT=465
-MAIL_USERNAME=support@qisofts.com
+MAIL_USERNAME=support@newparkdevelopment.com
 MAIL_PASSWORD="p.r(F%Lz(J-2"
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=support@qisofts.com
+MAIL_FROM_ADDRESS=support@newparkdevelopment.com
 MAIL_FROM_NAME="QI Softs"
 
 
