--- a/.env
+++ b/.env
@@ -1,24 +1,23 @@
-APP_NAME=newparkdevelopment
+APP_NAME=sadaadd
 APP_ENV=local
 APP_KEY=base64:qK1We0c0W9jjzsl79/2F780kIQ5dodYeeZdalI9hyjc=
 APP_DEBUG=true
-APP_URL=https://newparkdevelopment.com
+APP_URL=https://sadaadd.com
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=newpbrhb_db
-DB_USERNAME=newpbrhb_sofa_api
-DB_PASSWORD="$WR1q-iJE3_K"
+DB_DATABASE="sadaadd.com"
+DB_USERNAME=root
+DB_PASSWORD=""
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
