--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE="sadaadd.com"
-DB_USERNAME=root
-DB_PASSWORD=""
+DB_DATABASE="sadaadd"
+DB_USERNAME='sofa-cart'
+DB_PASSWORD='V!!LR7RF2*Eg'
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
